# lastfm-rpc

./: .env.example  README.md  pyproject.toml
src/: main.py
